RESOLVED FIXED221271
REGRESSION(r271744): Broke Microsoft live login in internal builds
https://bugs.webkit.org/show_bug.cgi?id=221271
Summary REGRESSION(r271744): Broke Microsoft live login in internal builds
WebKit Commit Bot
Reported 2021-02-02 10:23:54 PST
https://trac.webkit.org/changeset/271744 broke the build: Broke Microsoft live login in internal builds This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r271744 (3.43 KB, patch)
2021-02-02 10:24 PST, WebKit Commit Bot
no flags
Patch for landing (1.87 KB, patch)
2021-02-02 10:30 PST, Kate Cheney
no flags
Patch (3.96 KB, patch)
2021-02-02 10:57 PST, Kate Cheney
no flags
WebKit Commit Bot
Comment 1 2021-02-02 10:24:00 PST
Created attachment 419025 [details] REVERT of r271744 Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Kate Cheney
Comment 2 2021-02-02 10:30:08 PST
Created attachment 419027 [details] Patch for landing
Kate Cheney
Comment 3 2021-02-02 10:57:31 PST
Kate Cheney
Comment 4 2021-02-02 11:00:15 PST
EWS
Comment 5 2021-02-02 13:15:56 PST
Committed r272229: <https://trac.webkit.org/changeset/272229> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419029 [details].
Radar WebKit Bug Importer
Comment 6 2021-02-02 13:16:23 PST
Note You need to log in before you can comment on or make changes to this bug.